--- a/css/abcnursing_css.css
+++ b/css/abcnursing_css.css
@@ -37,36 +37,34 @@ header aside {
     color: black;
 }
 
-.sidenav {
+.sidenav{
     height: 100%;
-    width: 0;
+    width: 150px;
     position: fixed;
     z-index: 1;
-    top: 0;
+    top:0;
     right: 0;
-    background-color: #111;
+    background-color: gold;
     overflow-x: hidden;
-    transition: 0.5s;
     padding-top: 60px;
 }
 
-    .sidenav a {
-        padding: 8px 8px 8px 32px;
-        text-decoration: none;
-        font-size: 25px;
-        color: #818181;
-        display: block;
-        transition: 0.3s;
-    }
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: black;
+    transition: 0.3s;
+}
 
-        .sidenav a:hover {
-            color: #f1f1f1;
-        }
+.sidnav a:hover {
+    text-decoration: underline black;
+}
 
-    .sidenav .closebtn {
-        position: absolute;
-        top: 0;
-        right: 25px;
-        font-size: 36px;
-        margin-left: 50px;
-    }}
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 38px;
+    margin-left: 50px;
+}
