--- a/ABCNursing/ABCNursingMasterPage.master
+++ b/ABCNursing/ABCNursingMasterPage.master
@@ -23,7 +23,7 @@
                     </p>
             </aside>
             <div id="nav">
-                <a href="Default.aspx">Home</a>
+                <a href="Default.aspx">Homes</a>
                 <a href="Events.aspx">Events</a>
                 <a href="Analytics.aspx">Analytics</a>
                 <a href="Learn.aspx">Learn</a>
