--- a/ABCNursing/ABCNursingMasterPage.master
+++ b/ABCNursing/ABCNursingMasterPage.master
@@ -24,9 +24,9 @@
             </aside>
             <div id="nav">
                 <a href="Default.aspx">Homes</a>
-                <a href="Events.aspx">Events</a>
-                <a href="Analytics.aspx">Analytics</a>
-                <a href="Learn.aspx">Learn</a>
+                <a href="Events.aspx">Eventsss</a>
+                <a href="Analytics.aspx">Analyticsss</a>
+                <a href="Learn.aspx">Learning</a>
             </div>
         </header>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
