--- a/ABCNursing/ABCNursingMasterPage.master
+++ b/ABCNursing/ABCNursingMasterPage.master
@@ -23,10 +23,10 @@
                     </p>
             </aside>
             <div id="nav">
-                <a href="Default.aspx">Homes</a>
-                <a href="Events.aspx">Eventsss</a>
-                <a href="Analytics.aspx">Analyticsss</a>
-                <a href="Learn.aspx">Learning</a>
+                <a href="Default.aspx">Home</a>
+                <a href="Events.aspx">Events</a>
+                <a href="Analytics.aspx">Analytics</a>
+                <a href="Learn.aspx">Learn</a>
             </div>
         </header>
         <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
