--- a/ABCNursing/ABCNursingMasterPage.master
+++ b/ABCNursing/ABCNursingMasterPage.master
@@ -6,32 +6,34 @@
 <head runat="server">
     <title></title>
     <link href="css/abcnursing_css.css" rel="stylesheet" />
-    <asp:ContentPlaceHolder id="head" runat="server">
+    <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
 <body>
     <form id="form1" runat="server">
-    <div>
-        <header>
-            <img src="image/logo.png" />
-            <aside>
-                <p>
-&nbsp;<a href="Login.aspx">Log in</a>
+        <div>
+            <header>
+                <img src="image/logo.png" />
+                <aside>
+                    <p>
+                        <asp:Label ID="lblUser" runat="server" Text=""></asp:Label>
+                        <asp:Label ID="lblSignUp" runat="server" Text=""></asp:Label>
+                        <asp:Label ID="lblAdmin" runat="server" Text=""></asp:Label>
                     </p>
-            </aside>
-            <div id="nav">
-                <a href="Default.aspx">Home</a>
-                <a href="Aboutus.aspx">About Us</a>
-                <a href="Events.aspx">Events</a>
-                <a href="Analytics.aspx">Analytics</a>
-                <a href="Learn.aspx">Learn</a>
-            </div>
-        </header>
-        <main>
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
-        <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server"></asp:ContentPlaceHolder>
-    </main>
-            </div>
+                </aside>
+                <div id="nav">
+                    <a href="Default.aspx">Home</a>
+                    <a href="Aboutus.aspx">About Us</a>
+                    <a href="Events.aspx">Events</a>
+                    <a href="Analytics.aspx">Analytics</a>
+                    <a href="Learn.aspx">Learn</a>
+                </div>
+            </header>
+            <main>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server"></asp:ContentPlaceHolder>
+                <asp:ContentPlaceHolder ID="ContentPlaceHolder2" runat="server"></asp:ContentPlaceHolder>
+            </main>
+        </div>
     </form>
 </body>
 </html>
